# cuSZp

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  cuSZp.cpp  cuSZp_bench_1D_f32_plain.cpp  cuSZp_blk64.cu  cuSZp_blkN.cpp  cuSZp_dblk.cpp  cuSZp_profile_compress.cpp  cuSZp_profile_decompress.cpp  cuSZp_test_block_size_N.cpp  cuSZp_test_f32_1D.cpp  cuSZp_test_f32_1D_plain.cpp
include/cuSZp/: cuSZp_entry_1D_f32.h  cuSZp_entry_1D_f32_block_size_N.h  cuSZp_kernels_1D_f32.h  cuSZp_kernels_1D_f32_block_size_N.h
slurm/: data-block-N-uchar4.slurm  data-block-N.slurm  thread-block-N.slurm
src/: cuSZp_entry_1D_f32.cu  cuSZp_entry_1D_f32_block_size_N.cu  cuSZp_kernels_1D_f32.cu  cuSZp_kernels_1D_f32_block_size_N.cu
